# dataview

./: CLAUDE.md  README.md  pyproject.toml
dv/: main.py
dv/core/: config.py  datasource.py  detect.py  query.py  schema.py  stats.py
dv/render/: box.py  calendar.py  charts.py  diff.py  export.py  gantt.py  heatmap.py  histogram.py  money.py  summary.py  table.py  teacher.py  time_views.py  timeline.py  tree.py  uni.py
examples/: books.csv  expenses.csv  grades.csv  money.csv  sessions.csv  study.csv  tasks.csv  university.csv
plans/: money.md  plan.md  rel.md  report.md  teacher.md  time.md  uni.md
scripts/: gen_screenshots.py
tests/: test_charts.py  test_detect.py  test_query.py  test_schema.py
