[project]
name = "dv"
version = "0.1.0"
description = "Personal terminal dataview tool"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.5.3",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "textual>=8.2.7",
    "typer>=0.26.7",
]

[project.scripts]
dv = "dv.main:app"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
